# ChatTask

./: main.py  pyproject.toml
static/css/: base.css
templates/: index.html
